test/expected/large/scoredefinitions/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    foo.com/duname: scoredefntn
    foo.com/duversion: 2.12.54-20190924.1569361081794
    foo.com/version: 2.12.54
  labels:
    app.kubernetes.io/name: scoredefinitions
    helm.sh/chart: scoredefinitions-2.12.54
  name: scoredefinitions
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: scoredefinitions
  type: ClusterIP
